packages/core/src/navigation/_navigation-styles.scss
@use '~@mezzanine-ui/system/effect' as effect;
@use '~@mezzanine-ui/system/palette' as palette;
@use '~@mezzanine-ui/system/radius' as radius;
@use '~@mezzanine-ui/system/spacing' as spacing;
@use '~@mezzanine-ui/system/transition' as transition;
@use '~@mezzanine-ui/system/typography';
@use '../button/utils' as btn-utils;
@use '../icon';
@use './navigation' as *;
@use './utils';

// option icon and text height
$option-icon-size: spacing.semantic-variable(size, element, base) !default;
$option-height: calc(spacing.semantic-variable(padding, vertical, tight) * 2 + #{$option-icon-size}) !default;

.#{$prefix} {
  overflow: hidden;
  background-color: palette.semantic-variable('background', base);
  border-right: 1px solid palette.semantic-variable(separator, neutral-faint);
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  transition: transition.standard(width);

  &__content {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    gap: spacing.semantic-variable(gap, tight-fixed);
    margin-right: -1px;
    padding: spacing.semantic-variable(padding, vertical, base)
      spacing.semantic-variable(padding, horizontal, comfort-fixed);

    > ul {
      @include utils.reset();

      display: grid;
      gap: spacing.semantic-variable(gap, tight);
    }
  }

  &--expand {
    width: spacing.semantic-variable(size, container, slim);
    min-width: spacing.semantic-variable(size, container, slim);
    height: 100%;
  }

  &--collapsed {
    width: spacing.semantic-variable(size, container, collapsed);
    min-width: spacing.semantic-variable(size, container, collapsed);
    height: 100%;
    max-height: 100%;

    .#{$prefix}__content {
      overflow-y: hidden;
    }

    .#{$prefix}__search-input,
    .#{$option-category-prefix}__title {
      display: none;
    }
  }
}

.#{$overflow-menu-prefix} {
  $sub-menu-item-height: calc(spacing.semantic-variable(padding, vertical, tight) * 2 + spacing.semantic-variable(size, element, base));
  $sub-menu-item-gap: spacing.semantic-variable(gap, tiny);

  margin-left: spacing.semantic-variable(padding, horizontal, tight);
  box-shadow: effect.variable(shadow, raised);
  border-radius: radius.variable(roomy);
  background-color: palette.semantic-variable('background', base);
  height: fit-content;
  width: fit-content;
  display: flex;

  &__content {
    display: flex;
    overflow-y: hidden;
    width: fit-content;
    height: calc(spacing.semantic-variable(padding, vertical, tight) * 2 + #{$sub-menu-item-height} * 5.5 + #{$sub-menu-item-gap} * 5);
  }

  &__sub-menu {
    height: calc(#{$sub-menu-item-height} * 5.5 + #{$sub-menu-item-gap} * 5);
    margin: spacing.semantic-variable(padding, vertical, tight) 0;
    width: spacing.semantic-variable(size, container, tight);

    ul {
      display: flex;
      flex-direction: column;
      gap: $sub-menu-item-gap;
      padding: 0 spacing.semantic-variable(padding, horizontal, tight);
    }
  }
}


.#{$overflow-menu-option-prefix} {
  align-items: center;
  box-sizing: border-box;
  display: grid;
  flex-shrink: 1;
  gap: spacing.semantic-variable(gap, tight);
  height: unset;
  width: 100%;

  &__content {
    align-items: center;
    border-radius: radius.variable(base);
    border: none;
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    outline: none;
    overflow: hidden;
    width: 100%;
    gap: spacing.semantic-variable(gap, tight);
    padding: spacing.semantic-variable(padding, vertical, tight)
      spacing.semantic-variable(padding, horizontal, tight-fixed);
    transition: transition.standard(background-color, fast), transition.standard(color, fast);
    text-decoration: none;

    .#{$overflow-menu-option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));

      color: palette.semantic-variable(text, neutral-solid);
      line-height: spacing.semantic-variable(size, element, base);
      margin-right: auto;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .#{$overflow-menu-option-prefix}__icon {
      color: palette.semantic-variable(icon, neutral);
      height: #{$option-icon-size};
      width: #{$option-icon-size};
    }

    .#{$overflow-menu-option-prefix}__toggle-icon {
      color: palette.semantic-variable(icon, neutral);
      height: spacing.semantic-variable(size, element, slim);
      width: spacing.semantic-variable(size, element, slim);
    }

    &:hover {
      .#{$overflow-menu-option-prefix}__icon,
      .#{$overflow-menu-option-prefix}__toggle-icon {
        color: palette.semantic-variable(icon, neutral-solid);
      }

      background-color: palette.semantic-variable('background', neutral-faint);
    }

    &:focus-visible {
      box-shadow: effect.variable(focus, primary);
    }
  }

  &--active {
    .#{$overflow-menu-option-prefix}__content {
      background-color: palette.semantic-variable('background', brand-ghost);

      .#{$overflow-menu-option-prefix}__icon {
        color: palette.semantic-variable(icon, neutral-solid);
      }
    }
  }

  &--active.#{$overflow-menu-option-prefix}--basic {
    .#{$overflow-menu-option-prefix}__content {
      background-color: palette.semantic-variable('background', brand-faint);

      .#{$overflow-menu-option-prefix}__title {
        color: palette.semantic-variable(text, brand-solid);
      }

      .#{$overflow-menu-option-prefix}__icon {
        color: palette.semantic-variable(icon, brand-solid);
      }
    }
  }
}
/* ... */

